--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4566,8 +4566,9 @@ The above grammar allows for some grouping ambiguity when using operators in
 OMS definitions. These ambiguities are resolved according to the following
 list, listing operators in decreasing order of precedence:
 \begin{itemize}
+  \item \syntax{minimize}, \syntax{maximize}, \syntax{free}, and \syntax{cofree}. 
   \item \syntax{extract}, \syntax{forget}, \syntax{hide}, \syntax{keep},
-    \syntax{reject}, \syntax{remove}, \syntax{reveal}, \syntax{select} and
+    \syntax{reject}, \syntax{remove}, \syntax{reveal}, \syntax{select}, and
     \syntax{with}.
   \item \syntax{and}.
   \item \syntax{then}.
