bibliography improvements; killing capitalisation of working groups etc.

--- a/Standard/dol.bib
+++ b/Standard/dol.bib
@@ -87,35 +87,37 @@
 @article{CuencaGrauEtAl:ExtractingModulesOntologies2007,
   author = {B. Cuenca Grau and I. Horrocks and Y. Kazakov and and U. Sattler},
   title = {Just the Right Amount: Extracting Modules from Ontologies},
-  journal = {In: Proc.\ of the 16th International World Wide Web Conference (WWW), pp. 717–726, 8–12 May 2007, Banff, Alberta, Canada. \url{https://www.cs.ox.ac.uk/isg/people/yevgeny.kazakov/publications/confs/CueHorKazSat07Modularity.pdf}},
+  journal = {Proc.\ of the 16th International World Wide Web Conference (WWW)},
+  pages = {717--726},
+  address = {8--12 May 2007, Banff, Alberta, Canada},
   year = 2007,
 }
 @article{W3C:REC-turtle-20140225,
-  author = {W3C RDF CORE WORKING GROUP},
+  author = {W3C RDF Core Working Group},
   title = {{RDF} 1.1 Turtle.  Terse {RDF} Triple Language},
   journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/2014/REC-turtle-20140225/}},
   year = 2014,
 }
 @article{W3C:REC-rdf-syntax-grammar-20140225,
-  author = {W3C RDF CORE WORKING GROUP},
+  author = {W3C RDF Core Working Group},
   title = {{RDF} 1.1 {XML} Syntax},
   journal = {W3C Recommendation, 25 February 2014.  \url{http://www.w3.org/TR/2014/REC-rdf-syntax-grammar-20140225/}},
   year = 2014,
 }
 @article{W3C:REC-rdf-syntax-grammar-20040210,
-  author = {W3C RDF CORE WORKING GROUP},
+  author = {W3C RDF Core Working Group},
   title = {{RDF/XML} Syntax Specification (Revised)},
   journal = {W3C Recommendation, 10 February 2004.  \url{http://www.w3.org/TR/2004/REC-rdf-syntax-grammar-20040210/}},
   year = 2004,
 }
 @article{W3C:NOTE-swbp-vocab-pub-20080828,
-  author = {W3C SEMANTIC WEB DEPLOYMENT WORKING GROUP},
+  author = {W3C Semantic Web Deployment Working Group},
   title = {Best Practice Recipes for Publishing RDF Vocabularies},
   journal = {W3C Working Group Note, 28 August 2008.  \url{http://www.w3.org/TR/2008/NOTE-swbp-vocab-pub-20080828/}},
   year = 2008,
 }
 @article{rfc2616notused,
-  author = {IETF NETWORK WORKING GROUP},
+  author = {IETF Network Working Group},
   title = {Hypertext Transfer Protocol -- {HTTP/1.1}},
   journal = {RFC 2616, 1999},
   year = 1999,
@@ -127,13 +129,13 @@
   year = 2006,
 }
 @article{W3C:NOTE-owl2-manchester-syntax-20091027,
-  author = {W3C OWL WORKING GROUP},
+  author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language Manchester Syntax},
   journal = {W3C Working Group Note, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/NOTE-owl2-manchester-syntax-20091027/}},
   year = 2009,
 }
 @article{W3C:REC-owl2-rdf-based-semantics-20091027,
-  author = {W3C OWL WORKING GROUP},
+  author = {W3C OWL Working Group},
   title = {OWL 2 Web Ontology Language: RDF-Based Semantics},
   journal = {W3C Recommendation, 27 October 2009.\newline \url{http://www.w3.org/TR/2009/REC-owl2-rdf-based-semantics-20091027/}},
   year = 2009,
@@ -441,7 +443,7 @@ We distinguish three kinds of heterogeneity:
 }
 
 @misc{european_comission_inspire_2014,
-	title = {{INSPIRE} Geoportal: Enhancing access to European spatial data},
+	title = {{INSPIRE} {Geoportal: Enhancing access to European spatial data}},
 	note = {\url{http://inspire-geoportal.ec.europa.eu/}},
 	urldate = {2014-10-16},
 	author = {European Comission},
@@ -450,8 +452,8 @@ We distinguish three kinds of heterogeneity:
 
 @article{Mossakowski02,
   author =	 {Till Mossakowski},
-  title =	 {Relating {\CASL} with Other Specification Languages:
-                  the Institution Level},
+  title =	 {{Relating {\CASL} with Other Specification Languages:
+                  the Institution Level}},
   year =	 2002,
   journal =	 {Theoretical Computer Science},
   volume =	 {286},
